<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by James Henderson on 2017
  ~ Copyright (c) Hendercine Productions and James Henderson 2017.
  ~ All rights reserved.
  ~
  ~ Last modified 11/3/17 5:06 PM
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/step_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/steps_list_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/ingredients_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/min_btn_height"
            android:padding="@dimen/text_margin"
            android:scrollHorizontally="false"
            android:ellipsize="none"
            android:focusableInTouchMode="true"
            android:background="@drawable/selector_row"
            android:text="@string/recipe_ingredients_btn"
            android:textAppearance="?attr/textAppearanceListItem"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_list"
            android:name="com.example.hendercine.bakinbuns.RecipeListFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layoutManager="LinearLayoutManager"
            tools:context="com.hendercine.android.bakingtime.ui.StepsListActivity"
            tools:listitem="@layout/step_list_item"/>

    </LinearLayout>

</FrameLayout>

